<resources>
    <string name="app_name">Practica2</string>

    <string name="menu_option1">Novedades</string>
    <string name="menu_option2">Ofertas</string>
    <string name="menu_option3">PS4</string>
    <string name="menu_option4">Xbox</string>
    <string name="menu_option5">Practica2</string>
    <string name="menu_carrito">Mi carrito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>